css/main.css
body{
    margin: 0px;
    padding: 0px;
    color: white;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    width: 100vw;
}

a{
    color: white;
    text-decoration: none;
}

body{
    background: white;
}

.bg{
    background: url(../img/img-wave.png)bottom no-repeat;
}

.first_container{
    background: rgb(63,94,251);
    background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
}

.inner_container{
    margin: 0% 20%;
    background: url(../img/img-wave.png)bottom no-repeat;
}

nav{
    padding: 5%;
}

nav ul{
    list-style-type: none;
    float: right;
    padding: 10px;
    margin: 0;
}

nav ul li{
    float: left;
    padding: 0 1vw;
    right: 0;
}

nav ul li a{
    color: white;
    padding: 0 25%;
}

nav ul li a:hover{
    color: #c7c7c7;
}

#logo{
    width: 25%;
}

.container{
    width: 100%;
    height: 60vh;
    margin: 10% auto;
}

h1{
    font-size: 3vw;
    padding-left: 5%;
}

.container img{
    position: absolute;
    left: 45%;
    top: 12%;
    width: 45%;
}

#ios{
    position: absolute;
    left: 30%;
    top: 40%;
    width: 10%;
    cursor: pointer;
}

#android{
    position: absolute;
    left: 42%;
    top: 40%;
    width: 10%;
    cursor: pointer;
}

.second_container{
    background: white;
}

.inner_container_2{
    margin: 0% 20%;
    color: black;
    text-align: center;
}

.inner_container_2 h1{
    color: #636363;
    font-size: 3vw;
}

.inner_container_2 p{
    color: #8d8d8d;
    font-size: 2vw;
    text-align: center;
}

.third_container{
    background: #f8f8f8;
}

.inner_container_3{
    margin: 0% 20%;
    color: black;
}

.inner_container_3 img{
    width: 50%;
}

.inner_container_3 .how_to_drift{
    position: absolute;
    left: 50%;
    top: 150vh;
    text-align: justify;
}

.inner_container_3 .how_to_drift h1 {
    color: #636363;
    font-size: 3vw;
}

.inner_container_3 .how_to_drift ol li{
    color: #8d8d8d;
    padding: 2%;
    font-size: 1.5vw;
}

.fourth_container{
    background: white;
}

.inner_container_4{
    margin: 0% 20%;
    color: black;
    text-align: center;
    padding: 2% 0%;
}

.inner_container_4 h1{
    color: #636363;
    font-size: 3vw;
}

.inner_container_4 p{
    color: #8d8d8d;
    font-size: 1.5vw;
    text-align: justify;
}

.inner_container_4 h2{
    color: #636363;
    font-size: 2.5vw;
}

.inner_container_4 ul{
    list-style-type: none;
    color: #8d8d8d;
    font-size: 2vw;
}

.inner_container_4 img{
    width: 100%;
}

.fifth_container{
    background: rgb(131,58,180);
    background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 50%, rgba(252,176,69,1) 100%);
}

.inner_container_5{
    margin: 0% 20%;
    text-align: center;
    padding: 2% 0%;
}

.inner_container_5 h1{
    color: #ffffff;
    font-size: 3vw;
}

.inner_container_5 p{
    color: #f5f5f5;
    font-size: 1.5vw;
}

.inner_container_5 img{
    width: 100%;
}

.sixth_container{
    background: rgb(63,94,251);
    background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
}

.inner_container_6{
    margin: 0% 20%;
    background: url(../img/img-wave-alt.png)top no-repeat;
    text-align: center;
    padding: 2% 0%;
}

.bg_2{
    background: url(../img/img-wave-alt.png)top no-repeat;
}

.container_2{
    width: 100%;
    height: 25vh;
    margin: 10% auto;
    padding-top: 30%;
}

.container_2 h1{
    color: #ffffff;
    font-size: 3vw;
}

.container_2 a{
    margin: 0% 2%;
}

